--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-setup",
+  "name": "to-do-list",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Wahaj-Ali/To-do-list.git"
+    "url": "git+https://github.com/Wahaj-Ali/to-do-list.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Wahaj-Ali/To-do-list/issues"
+    "url": "https://github.com/Wahaj-Ali/to-do-list/issues"
   },
-  "homepage": "https://github.com/Wahaj-Ali/To-do-list#readme",
+  "homepage": "https://github.com/Wahaj-Ali/to-do-list#readme",
   "devDependencies": {
     "css-loader": "^6.7.2",
     "express": "^4.18.2",
